--- a/offline.html
+++ b/offline.html
@@ -159,8 +159,8 @@
             </ul>
         </div>
         
-        <button class="action-btn" onclick="window.location.reload()">
-            <i class="fas fa-sync-alt"></i> Retry Connection
+        <button class="action-btn" onclick="window.location.href='/mtp/'">
+                <i class="fas fa-sync-alt"></i> Retry Connection
         </button>
         
         <div class="connection-status" id="connectionStatus">
